--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,15 @@ jobs:
     - name: Install dependencies
       run: python -m pip install --upgrade requests
       
-    - name: 'Get infor'
+    - name: Get infor
       run: python 91porn.py
+
+    - name: Get ENV
+      env:
+        URL91: ${{ secrets.URL91 }}
+        run: echo $URL91
+
+
+
+
+
