--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,8 @@ jobs:
       run: python -m pip install --upgrade requests
       
     - name: Get infor
+      env:
+          URL91: ${{ secrets.URL91 }}
       run: python 91porn.py
 
 
